--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -1,35 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/profile"
-        android:title="Profile"
-        android:icon="@drawable/ic_baseline_person_24"/>
+    <item
+        android:id="@+id/profile"
+        android:icon="@drawable/ic_baseline_person_24"
+        android:title="Profile" />
 
-    <item android:id="@+id/wallet_item"
-        android:title="Wallet"
-        android:icon="@drawable/ic_baseline_account_balance_wallet_24"/>
+    <item
+        android:id="@+id/wallet_item"
+        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
+        android:title="Wallet" />
 
-    <item android:id="@+id/search"
-        android:title="Find People"
-        android:icon="@drawable/ic_baseline_search_24"/>
+    <item
+        android:id="@+id/search"
+        android:icon="@drawable/ic_baseline_search_24"
+        android:title="Find People" />
 
-    <item android:id="@+id/howToPlay"
-        android:title="How To Play"
-        android:icon="@drawable/ic_baseline_games_24"/>
+    <item
+        android:id="@+id/howToPlay"
+        android:icon="@drawable/ic_baseline_games_24"
+        android:title="How To Play" />
 
-    <item android:id="@+id/infoSettings"
-        android:title="My Info and Settings"
-        android:icon="@drawable/ic_baseline_settings_24"/>
+    <item
+        android:id="@+id/infoSettings"
+        android:icon="@drawable/ic_baseline_settings_24"
+        android:title="My Info &amp; Settings" />
 
-    <item android:id="@+id/aboutUs"
-        android:title="About Us"
-        android:icon="@drawable/ic_baseline_people_alt_24"/>
+    <item
+        android:id="@+id/aboutUs"
+        android:icon="@drawable/ic_baseline_people_alt_24"
+        android:title="About Us" />
 
-    <item android:id="@+id/termsAndConditions"
-        android:title="Terms and conditions"
-        android:icon="@drawable/ic_baseline_description_24"/>
+    <item
+        android:id="@+id/termsAndConditions"
+        android:icon="@drawable/ic_baseline_description_24"
+        android:title="Terms &amp; conditions" />
 
-    <item android:id="@+id/logOut"
-        android:title="Logout"
-        android:icon="@drawable/ic_baseline_logout_24"/>
+    <item
+        android:id="@+id/logOut"
+        android:icon="@drawable/ic_baseline_logout_24"
+        android:title="Logout" />
 </menu>
