--- a/app/src/main/res/layout/activity_add_cash2.xml
+++ b/app/src/main/res/layout/activity_add_cash2.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AddCash">
+    tools:context=".WalletPackage.AddCash">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -171,6 +171,7 @@
             android:layout_weight="6"
             android:gravity="center"
             android:hint="Add Amount"
+            android:inputType="number"
             android:textColor="@color/black" />
 
         <TextView
@@ -186,23 +187,77 @@
 
     </LinearLayout>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:id="@+id/myRecentPay"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
+                android:drawablePadding="4dp"
+                android:padding="7dp"
+                android:text="My Recent Payments"
+                android:textColorHint="#555555"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:id="@+id/KYCDetails"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="4"
+                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
+                android:drawablePadding="4dp"
+                android:padding="7dp"
+                android:text="KYC Details"
+                android:textColorHint="#555555"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="150dp"
         android:layout_marginRight="100dp"
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/addCash"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:id="@+id/addCash"
-            android:textColor="@color/white"
             android:background="@drawable/border_red"
-            android:text="Add 50" />
+            android:gravity="center"
+            android:text="Add 50"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
