--- a/app/src/main/res/layout/activity_kycactivity.xml
+++ b/app/src/main/res/layout/activity_kycactivity.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".WalletPackage.RecentTransactions"
-    android:orientation="vertical">
+    tools:context=".WalletPackage.KYCActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -30,34 +30,12 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="9"
                 android:gravity="center"
-                android:text="Recent Transactions"
+                android:text="Verify Account"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
         </LinearLayout>
 
     </androidx.appcompat.widget.Toolbar>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginTop="70dp"
-        android:orientation="vertical">
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Transaction Date"
-            android:textColor="@color/black"
-            android:backgroundTint="@color/light_gray"
-            android:id="@+id/transactionDate"/>
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/listViewNotification"/>
-
-    </LinearLayout>
 
 </LinearLayout>
