Work on MainActivity.java

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,7 +99,7 @@
                 android:layout_marginRight="5dp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/vendorsImage"
+                android:id="@+id/recyclerViewMatchList"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/view_pager"
