--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,43 +69,6 @@
 
         </androidx.appcompat.widget.Toolbar>
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar1"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="52dp"
-            android:background="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:titleTextColor="#fff">
-
-            <LinearLayout
-                android:id="@+id/LinearLayout"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:visibility="gone"
-                android:weightSum="10">
-
-                <TextView
-                    android:id="@+id/imageCricket"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:drawableLeft="@drawable/ic_baseline_sports_baseball_24"
-                    android:visibility="gone" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="8" />
-
-            </LinearLayout>
-
-        </androidx.appcompat.widget.Toolbar>
-
         <LinearLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
@@ -124,7 +87,7 @@
             android:layout_weight="1"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar1">
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/view_bannerItem"
