One problems solved on TabView..

--- a/app/src/main/res/layout/fragment_cricket.xml
+++ b/app/src/main/res/layout/fragment_cricket.xml
@@ -6,20 +6,19 @@
     android:orientation="vertical"
     tools:context=".Fragment.CricketFragment">
 
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_bannerItem"
+        android:layout_width="match_parent"
+        android:layout_height="110dp"
+        android:layout_gravity="top"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp" />
 
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/view_bannerItem"
-            android:layout_width="match_parent"
-            android:layout_height="110dp"
-            android:layout_gravity="top"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="5dp" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerViewMatchList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewMatchList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp" />
 
 </LinearLayout>
