--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="dark_green">#006400</color>
     <color name="gray">#6A6A6A</color>
     <color name="light_gray">#ECECEC</color>
+    <color name="header_black">#373737</color>
+    <color name="counter_bg">#008577</color>
+    <color name="yellow_theme">#ECBD15</color>
 </resources>
