--- a/app/src/main/res/layout/fragment_my_matches.xml
+++ b/app/src/main/res/layout/fragment_my_matches.xml
@@ -3,74 +3,77 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MyMatchesFragment">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        tools:ignore="MissingConstraints">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="10">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="center"
-                android:src="@drawable/ic_phonepe_logo"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
-
-        </LinearLayout>
-
-    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:background="@color/light_gray"
         android:orientation="horizontal"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:weightSum="9">
+        android:weightSum="8">
 
         <TextView
-            android:id="@+id/backPress"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_weight="3"
-            android:gravity="center"
+            android:id="@+id/upcoming"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
             android:layout_gravity="center"
+            android:layout_weight="3"
+            android:background="@drawable/border4_green"
+            android:gravity="center"
             android:text="Upcoming"
             android:textColor="@color/black"
             android:textStyle="bold" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_weight="3"
+            android:id="@+id/live"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:background="@drawable/border4_green"
             android:gravity="center"
             android:text="Live"
-            android:layout_gravity="center"
             android:textColor="@color/black"
-            android:textSize="15sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/notification"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
+            android:id="@+id/completed"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_gravity="center"
             android:layout_weight="3"
+            android:background="@drawable/border4_green"
             android:gravity="center"
             android:text="Completed"
-            android:layout_gravity="center"
             android:textColor="@color/black"
             android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/upcomingMatch"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/border1_green"
+            android:gravity="center"
+            android:text="VIEW UPCOMING MATCHES"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:visibility="gone" />
 
     </LinearLayout>
 
