--- a/app/src/main/res/layout/match_list.xml
+++ b/app/src/main/res/layout/match_list.xml
@@ -143,7 +143,8 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="left"
-                android:text="Mega"
+                android:text="MEGA"
+                android:textStyle="bold"
                 android:textColor="@color/green" />
 
             <TextView
